--- a/dizon.html
+++ b/dizon.html
@@ -294,10 +294,10 @@ ul, #myUL {
       	</li>   
 
       	<!--pemi-->
-      	<li><span class="caret">Pemi/Oping (Eufemia) & Pepe Angeles</span>
+      	<li><span class="caret">Pemi/Openg (Eufemia) & Pepe Angeles</span>
       		<ul class="nested">
 
-      			<li><span class="caret">Fely (Felicidad) & Milo Riingen</span>
+      			<li><span class="caret">Fely (Felicidad) & Milo (Camilo) Riingen</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Ana &</span>
 							<ul class="nested">
@@ -320,7 +320,7 @@ ul, #myUL {
           			</ul>
           		</li>   
 
-      			<li><span class="caret">Jorge & </span>
+      			<li><span class="caret">Jose (Jorge/Jr) & Lagring</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Arnel & </span>
 							<ul class="nested">             					
@@ -331,49 +331,9 @@ ul, #myUL {
             				</ul>
           				</li>
           			</ul>
-          		</li>            		
+          		</li>          
 
-      			<li><span class="caret">Melchor(Suk) & </span>
-		  			<ul class="nested">
-		  				<li><span class="caret">Mel & Raquel Natanawan</span>
-							<ul class="nested">  
-								<li>
-									Melchor III (Thirdy)
-								</li>           					
-            				</ul>
-          				</li>
-		  				<li><span class="caret">Gina (Dec12)& </span>
-							<ul class="nested">            					
-            				</ul>
-          				</li>
-		  				<li><span class="caret">Charo & </span>
-							<ul class="nested">            					
-            				</ul>
-          				</li> 
-          			</ul>
-          		</li>          		
-
-     			<li><span class="caret">Lolita & </span>
-		  			<ul class="nested">
-		  				<li><span class="caret">Vangie Tuazon Pastrana</span>
-							<ul class="nested">  
- 								<li>
-								</li>           					
-            				</ul>
-          				</li>
-          			</ul>
-          		</li>
-
-      			<li><span class="caret">Dak & </span>
-		  			<ul class="nested">
-		  				<li><span class="caret">Abring & </span>
-							<ul class="nested">            					
-            				</ul>
-          				</li>
-          			</ul>
-          		</li>         		
-
-      			<li><span class="caret">Gloria & Juan Sr</span>
+     			<li><span class="caret">Gloria (Glo)& Juan Dela Cruz Sr</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Anchie (Emy) & Steven</span>
 							<ul class="nested">
@@ -397,7 +357,51 @@ ul, #myUL {
           			</ul>
           		</li>
 
-      			<li><span class="caret">Rosalina (Rose-Jul18) & Pado Sicat</span>
+
+  		
+
+      			<li><span class="caret">Melchor(Suk) & Ester</span>
+		  			<ul class="nested">
+		  				<li><span class="caret">Mel & Raquel Natanawan</span>
+							<ul class="nested">  
+								<li>
+									Melchor III (Thirdy)
+								</li>           					
+            				</ul>
+          				</li>
+		  				<li><span class="caret">Gina (Dec12)& </span>
+							<ul class="nested">            					
+            				</ul>
+          				</li>
+		  				<li><span class="caret">Charo & </span>
+							<ul class="nested">            					
+            				</ul>
+          				</li> 
+          			</ul>
+          		</li>          		
+
+     			<li><span class="caret">Lolita (Lolet) & Dominador (Doming) Tuazon</span>
+		  			<ul class="nested">
+		  				<li><span class="caret">Vangie Tuazon Pastrana</span>
+							<ul class="nested">  
+ 								<li>
+								</li>           					
+            				</ul>
+          				</li>
+          			</ul>
+          		</li>
+
+      			<li><span class="caret">Erlinda (Linda/Dak) & Eduardo Giron</span>
+		  			<ul class="nested">
+		  				<li><span class="caret">Abring & </span>
+							<ul class="nested">            					
+            				</ul>
+          				</li>
+          			</ul>
+          		</li>         		
+
+ 
+      			<li><span class="caret">Rosalina (Rose-Jul18) & Jamie (Padu) Cortez</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Jocelyn & Sicat</span>
 							<ul class="nested">           					
@@ -414,7 +418,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-      			<li><span class="caret">Narcisa (Narcy/Narsing/Sisa-Apr12) & Roberto Sunga</span>
+      			<li><span class="caret">Narcisa (Narcy/Narsing/Sisa-Apr12) & Roberto (Bobby)Sunga</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Haz El & </span>
 							<ul class="nested">   
@@ -429,7 +433,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-      			<li><span class="caret">Ben & Fatima</span>
+      			<li><span class="caret">Ben & Francine</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Jover & </span>
 							<ul class="nested">        					
@@ -446,7 +450,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-          		<li><span class="caret">Rutelia (Ruth) & Peter Cayanan</span>
+          		<li><span class="caret">Rutelia (Ruth) & Pedor (Peter) Cayanan</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Cynthia & Rex Sta Maria</span>
 							<ul class="nested">           					
@@ -455,7 +459,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-          		<li><span class="caret">Africa(Feb03) & Allan Paliuanan</span>
+          		<li><span class="caret">Africa(Afric-Feb03) & Allan Paliuanan</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Kris & </span>
 							<ul class="nested">              					
@@ -474,7 +478,7 @@ ul, #myUL {
 		  				<li><span class="caret">Michelle & Ferry</span>
 							<ul class="nested"> 
 								<li>Michaela</li>
-								<li>Alexandre</li>								             					
+								<li>Alexandre</li>							             					
             				</ul>
           				</li>
           			</ul>
