--- a/tgt.html
+++ b/tgt.html
@@ -98,17 +98,16 @@
 
 				<li><span class="caret">Service & Engagement</span>
           			<ul class="nested">
-          				<li><span class="caret">Brea</span>
+          				<li><span class="caret">Brea <img src="../emy/emy02.jpg" width="75" height="75"></span>
             			    <ul class="nested">
-          				        <li><span class="caret">Adiline, Gabe, Ricky</span>
+          				        <li><span class="caret">Adilene,<img src="../emy/emy02.jpg" width="75" height="75"> Gabe,<img src="../emy/emy02.jpg" width="75" height="75"> Ricky<img src="../emy/emy02.jpg" width="75" height="75"></span>
             				        <ul class="nested">
-              					        <li>Aaron</li>
-              					       <li>Bernie</li>
-              					        <li>Cherie</li>
+              					        <li>Aaron<img src="../emy/emy02.jpg" width="75" height="75"></li>
+              					        <li>Bernie</li>            					        
               				        	<li>Hilda</li>
-              					       <li>Linda</li>
+              					        <li>Linda<img src="../emy/emy02.jpg" width="75" height="75"></li>
               				        	<li>Mario</li>
-              					       <li>Sabino</li>
+              					        <li>Sabino</li>
             				        </ul>
           				        </li>
             				</ul>
@@ -141,7 +140,7 @@
 
 				<li><span class="caret">Closing</span>
           			<ul class="nested">
-          				<li><span class="caret">TL</span>
+          				<li><span class="caret">Kevin></span>
             				<ul class="nested">
               					<li>TM1</li>
               					<li>TM2</li>
