--- a/tgt.html
+++ b/tgt.html
@@ -98,14 +98,14 @@
 
 				<li><span class="caret">Service & Engagement</span>
           			<ul class="nested">
-          				<li><span class="caret">Brea <img src="../emy/emy02.jpg" width="75" height="75"></span>
+          				<li><span class="caret">Brea <img src="emy02.jpg" width="75" height="75"></span>
             			    <ul class="nested">
-          				        <li><span class="caret">Adilene,<img src="../emy/emy02.jpg" width="75" height="75"> Gabe,<img src="../emy/emy02.jpg" width="75" height="75"> Ricky<img src="../emy/emy02.jpg" width="75" height="75"></span>
+          				        <li><span class="caret">Adilene,<img src="emy02.jpg" width="75" height="75"> Gabe,<img src="emy02.jpg" width="75" height="75"> Ricky<img src="emy02.jpg" width="75" height="75"></span>
             				        <ul class="nested">
-              					        <li>Aaron<img src="../emy/emy02.jpg" width="75" height="75"></li>
+              					        <li>Aaron<img src="emy02.jpg" width="75" height="75"></li>
               					        <li>Bernie</li>            					        
               				        	<li>Hilda</li>
-              					        <li>Linda<img src="../emy/emy02.jpg" width="75" height="75"></li>
+              					        <li>Linda<img src="emy02.jpg" width="75" height="75"></li>
               				        	<li>Mario</li>
               					        <li>Sabino</li>
             				        </ul>
