--- a/tgt.html
+++ b/tgt.html
@@ -50,7 +50,6 @@
 
 </head>
 
-
 <body>
  <ul id="myUL">
       	<li><span class="caret">Krysanna</span>
@@ -101,7 +100,7 @@
           			<ul class="nested">
           				<li><span class="caret">Brea <img src="emy02.jpg" width="75" height="75"></span>
             			    <ul class="nested">
-          				        <li><span class="caret">Adilene,<img src="emy02.jpg" width="75" height="75"> Gabe,<img src="emy02.jpg" width="75" height="75"> Ricky<img src="emy02.jpg" width="75" height="75"></span>
+          				        <li><span class="caret">Adilene,<img src="Adilene_01.jpg" width="75" height="75"> Gabe,<img src="Gabe_01.jpg" width="75" height="75"> Ricky<img src="Ricky_01.jpg" width="75" height="75"></span>
             				        <ul class="nested">
               					        <li>Aaron<img src="emy02.jpg" width="75" height="75"></li>
               					        <li>Bernie</li>            					        
