--- a/dizon.html
+++ b/dizon.html
@@ -85,7 +85,7 @@ ul, #myUL {
 
 
     	<!--supri-->
-      	<li><span class="caret">Supri (Cipriano) <img src="Supri.jpg" width="50" height="50"> & Gunding</span>
+      	<li><span class="caret">Supri (Cipriano) &#10007  <img src="Supri.jpg" width="50" height="50"> & Gunding &#10007 </span>
       		<ul class="nested">
 
       			<li><span class="caret">Pascual (Hardy-mmdd) & Sonia</span>
@@ -298,10 +298,10 @@ ul, #myUL {
 
       	<!-- pemi pemi pemi pemi pemi pemi pemi pemi pemi pemi pemi pemi pemi pemi pemi pemi -->
 
-      	<li><span class="caret">Pemi/Openg (Eufemia) <img src="Pemi.jpg" width="50" height="50"> & Pepe Angeles</span>
+      	<li><span class="caret">Pemi/Openg (Eufemia) &#10007 <img src="Pemi.jpg" width="50" height="50"> & Pepe Angeles &#10007 </span>
       		<ul class="nested">
 
-      			<li><span class="caret">Felicidad (Fely/Ising/Cidad) Dizon Angeles-Riingen ✝️<img src="pemi_fely_cidad.jpg" width="50" height="50"> & Camilo (Milo) Riingen ✝️ ></span>
+      			<li><span class="caret">Felicidad (Fely/Ising/Cidad) Dizon Angeles-Riingen ✝️<img src="pemi_fely_cidad.jpg" width="50" height="50"> & Camilo (Milo) Riingen ✝️ </span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Nicanor (Nick) Riingen </span>
 							<ul class="nested">            					
@@ -533,7 +533,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-      			<li><span class="caret">8. Narcisa (Narcy/Narcing/Sisa) Dizon Angeles-Sunga<img src="Narcisa.jpg" width="50" height="50">  & Roberto (Bobby) Sunga</span>
+      			<li><span class="caret">Narcisa (Narcy/Narcing/Sisa) Dizon Angeles-Sunga<img src="Narcisa.jpg" width="50" height="50">  & Roberto (Bobby) Sunga</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Hazel Sunga-Aquino & Dennis John Aquino</span>
 							<ul class="nested">   
@@ -548,7 +548,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-      			<li><span class="caret">9. Jovencio (Ben) Dizon-Angeles  <img src="Ben.jpg" width="50" height="50"> & Francisca (Francing) Musni-Angeles</span>
+      			<li><span class="caret">Jovencio (Ben) Dizon-Angeles  <img src="Ben.jpg" width="50" height="50"> & Francisca (Francing) Musni-Angeles</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Julius Angeles ✝️ & Haidilyn (Haidi) Tolentino-Angeles</span>
 							<ul class="nested">   
@@ -606,7 +606,7 @@ ul, #myUL {
 
 
       	<!--aling-->
-      	<li><span class="caret">Aling (Elena) <img src="Aling.jpg" width="50" height="50"> & Panta Nacpil</span>
+      	<li><span class="caret">Aling (Elena) &#10007 <img src="Aling.jpg" width="50" height="50"> & Panta Nacpil &#10007 </span>
       		<ul class="nested">
 
       			<li><span class="caret">Pepe & </span>
@@ -640,7 +640,7 @@ ul, #myUL {
           			</ul>
           		</li>          		  
 
-     			<li><span class="caret">Teban & </span>
+     			<li><span class="caret">Teban &#10007 & </span>
 		  			<ul class="nested">
 		  				<li><span class="caret"></span>
 							<ul class="nested">            					
@@ -686,7 +686,7 @@ ul, #myUL {
       		</ul>
       	</li>	<!--aling-->
  
-      	<li><span class="caret">German(Ger-mmdd) <img src="German.jpg" width="50" height="50"> & Flora</span>
+      	<li><span class="caret">German(Ger-mmdd) &#10007 <img src="German.jpg" width="50" height="50"> & Flora &#10007 </span>
       		<ul class="nested">
 
 				<li><span class="caret">Abel (Ado-mmdd) & Mila</span>
@@ -706,7 +706,7 @@ ul, #myUL {
           			</ul>
           		</li> 
 
-				<li><span class="caret">Eddie & </span>
+				<li><span class="caret">Eddie &#10007 & </span>
 		  			<ul class="nested">
           			</ul>
           		</li>          		     			
@@ -721,7 +721,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-      			<li><span class="caret">Francisco (Francis-Jan-17) & Imelda (Bong-Jul31)</span>
+      			<li><span class="caret">Francisco (Francis-Jan-17)✝️ & Imelda (Bong-Jul31)</span>
 		  			<ul class="nested">          				
           				<li><span class="caret">Ivy & Mark Lingad</span>
 							<ul class="nested">
@@ -794,7 +794,7 @@ ul, #myUL {
       	</li> 	<!--german-->
 
 
-      	<li><span class="caret">Badi (Maria Corazon)✝️ <img src="Badi.jpg" width="50" height="50"> & Sidung Dimarucut</span>
+      	<li><span class="caret">Badi (Maria Corazon)✝️ <img src="Badi.jpg" width="50" height="50"> & Sidung Dimarucut &#10007 </span>
       		<ul class="nested">
 
       			<li><span class="caret">Norma & Chu </span>
@@ -841,7 +841,7 @@ ul, #myUL {
 		  		</li> 
 
 
-      			<li><span class="caret">Renato (Toto) & </span>
+      			<li><span class="caret">Renato (Toto) &#10007 & </span>
          			<ul class="nested">
           				<li><span class="caret"></span>
             				<ul class="nested">
@@ -878,7 +878,7 @@ ul, #myUL {
 
           				<li><span class="caret">Jescil & </span>
             				<ul class="nested">
-              					<<li></li>
+              					<li></li>
             				</ul>
           				</li>
 
@@ -937,7 +937,7 @@ ul, #myUL {
               					<li></li>
             				</ul>
           				</li> 
-          				<li><span class="caret">? Pogs & </span>
+          				<li><span class="caret">Pogs & </span>
             				<ul class="nested">
               					<li></li>
             				</ul>
@@ -1030,7 +1030,7 @@ ul, #myUL {
       	<li><span class="caret">Ruming (Remigio Sr) <img src="Ruming.jpg" width="50" height="50"> &#10015 & Tuding &#10015</span>
         	<ul class="nested">
 
-		  		<li><span class="caret">Henry+ & Lucy+</span>
+		  		<li><span class="caret">Henry &#10007 & Lucy &#10007 </span>
          			<ul class="nested">
           				<li><span class="caret">Eileen & Domantay</span>
             				<ul class="nested">
@@ -1362,7 +1362,7 @@ ul, #myUL {
             		</ul>
           		</li>
 
-          		<li><span class="caret">Belto & </span>
+          		<li><span class="caret">Belto (Bert) & </span>
             		<ul class="nested"> 
             			<li><span class="caret">Jacquelyn (Ging) & Dela Cruz</span>
             				<ul class="nested"> 
@@ -1392,10 +1392,10 @@ ul, #myUL {
       	</li>  <!--mereng-->
 
 
-      	<li><span class="caret">Edong (Alfredo)+ <img src="Edong.jpg" width="50" height="50"> & Cely+</span>
+      	<li><span class="caret">Edong (Alfredo) &#10007 <img src="Edong.jpg" width="50" height="50"> & Cely &#10007 </span>
         	<ul class="nested">
 
-          		<li><span class="caret">Willy+ & Ellen</span>
+          		<li><span class="caret">Willy &#10007 & Ellen</span>
             		<ul class="nested">
          				<li><span class="caret">Desiree (Daily) & Bour'bon Katigbak</span>
             				<ul class="nested">
@@ -1445,7 +1445,7 @@ ul, #myUL {
             		</ul>
           		</li>
 
-          		<li><span class="caret">Nina+</span>
+          		<li><span class="caret">Nina &#10007 </span>
           		</li>
 
         	</ul>
