--- a/dizon.html
+++ b/dizon.html
@@ -312,14 +312,14 @@ ul, #myUL {
               					<li>Felice Anne (Felice) Riingen</li>          					
             				</ul>
           				</li>
-         				<li><span class="caret">Leonardo (Leo/Boyet) Riingen  <img src="Leo.jpg" width="50" height="50"> & Patricia (Diday) Zamora -Riingen</span>
+         				<li><span class="caret">Leonardo (Leo/Boyet) Riingen <img src="Leo.jpg" width="50" height="50"> & Patricia (Diday) Zamora -Riingen</span>
 							<ul class="nested">    
               					<li>Miguel Nicholas (Miko) & Janice Koh-Riingen</li>   
               					<li>Victoria Patricia (Tisha) Riingen</li>  
               					<li>Beatrice Celine (Tracy) Riingen</li>           					
             				</ul>
           				</li>
-		  				<li><span class="caret">Belen Riingen-Victoria & Rainier Victoria</span>
+		  				<li><span class="caret">Belen Riingen-Victoria <img src="Belen.jpg" width="50" height="50"> & Rainier Victoria</span>
 							<ul class="nested">   
                					<li>Pauline Marie (Pauline/Pau) Victoria</li>         					
             				</ul>
@@ -587,7 +587,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-          		<li><span class="caret">Africa (Afric/Afri) Dizon Angeles-Paliuanan & Allan Paliuanan</span>
+          		<li><span class="caret">Africa (Afric/Afri) Dizon Angeles-Paliuanan <img src="Africa.jpg" width="50" height="50"> & Allan Paliuanan</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Kristine (Kris) Paliuanan</span>
 							<ul class="nested">              					
